Rapid Prd/src/objects/Underwriting__c.object
<CustomObject>
    <fields>
        <fullName>QC_Start_Date__c</fullName>
        <formula>Opportunity__r.Calculate_Due_Dates__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QC Start Date:</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RE_Decision_Date__c</fullName>
        <label>RE-Decision Date:</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Re_Price_Reasons__c</fullName>
        <inlineHelpText>When new reason added, please update &quot;Re_Price_Reasons&quot; formula field in Opp Object</inlineHelpText>
        <label>Re-Price Reasons:</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st &amp; 2nd month ROI &lt; 50% Ren</fullName>
                </value>
                <value>
                    <fullName>1st &amp; 2nd months ROI &lt; 60%</fullName>
                </value>
                <value>
                    <fullName>1st month ROI &lt; 50% Ren</fullName>
                </value>
                <value>
                    <fullName>1st month ROI &lt; 60%</fullName>
                </value>
                <value>
                    <fullName>Adding/Removing a Location</fullName>
                </value>
                <value>
                    <fullName>Bank statement do not support GS</fullName>
                </value>
                <value>
                    <fullName>Bank Statement negative ending balance</fullName>
                </value>
                <value>
                    <fullName>CC statements do not match Sales pricing</fullName>
                </value>
                <value>
                    <fullName>Changing Product Type</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Credit Committee Re-price</fullName>
                </value>
                <value>
                    <fullName>Currently Underperforming</fullName>
                </value>
                <value>
                    <fullName>Decline in CC Volume</fullName>
                </value>
                <value>
                    <fullName>Does not meet Swift Fico Score</fullName>
                </value>
                <value>
                    <fullName>Estimated Duration exceeds 240 days</fullName>
                </value>
                <value>
                    <fullName>Exceeds max split for business type</fullName>
                </value>
                <value>
                    <fullName>Exceeds Max Term for ROI 40-49</fullName>
                </value>
                <value>
                    <fullName>Excessive Returned Checks</fullName>
                </value>
                <value>
                    <fullName>High Risk Business</fullName>
                </value>
                <value>
                    <fullName>Increase due to competitor balance</fullName>
                </value>
                <value>
                    <fullName>Inflated Gross Sales</fullName>
                </value>
                <value>
                    <fullName>Insufficient Batching</fullName>
                </value>
                <value>
                    <fullName>Low Batching</fullName>
                </value>
                <value>
                    <fullName>Low Fico Score-Swift</fullName>
                </value>
                <value>
                    <fullName>Merchant requested higher advance</fullName>
                </value>
                <value>
                    <fullName>Merchant requested less monies</fullName>
                </value>
                <value>
                    <fullName>Merchant requested lower split</fullName>
                </value>
                <value>
                    <fullName>No Longer offer Product Type</fullName>
                </value>
                <value>
                    <fullName>On Prohibited List</fullName>
                </value>
                <value>
                    <fullName>Overall Performance ROI too low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remaining_Balance__c</fullName>
        <label>Amount Sold Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Number__c</fullName>
        <formula>Opportunity__r.Renewal_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal__c</fullName>
        <formula>if( Opportunity__r.Renewal__c ,&quot;YES&quot;,&quot;NO&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rescind_Reason__c</fullName>
        <label>Rescind Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Canadian Merchant on Hold Until Further Notice</fullName>
                </value>
                <value>
                    <fullName>Cannot Establish Landlord Contact</fullName>
                </value>
                <value>
                    <fullName>Cannot Establish Merchant Contact</fullName>
                </value>
                <value>
                    <fullName>Due to Re-price</fullName>
                </value>
                <value>
                    <fullName>Duplicate Application</fullName>
                </value>
                <value>
                    <fullName>Funding Delayed</fullName>
                </value>
                <value>
                    <fullName>Insufficient Batching</fullName>
                </value>
                <value>
                    <fullName>Merchant couldn&apos;t/ wouldn&apos;t produce docs</fullName>
                </value>
                <value>
                    <fullName>Merchant couldn&apos;t /wouldn&apos;t produce processing docs</fullName>
                </value>
                <value>
                    <fullName>Merchant does not like pricing</fullName>
                </value>
                <value>
                    <fullName>Merchant Does Not Want to Switch Processors</fullName>
                </value>
                <value>
                    <fullName>Merchant Does Not Want to Switch Processors or Do RMB</fullName>
                </value>
                <value>
                    <fullName>Merchant is No Longer Interested</fullName>
                </value>
                <value>
                    <fullName>Merchant Not Cooperative</fullName>
                </value>
                <value>
                    <fullName>Merchant Not Interested</fullName>
                </value>
                <value>
                    <fullName>Merchant Processor will Not Accept RMB Letter</fullName>
                </value>
                <value>
                    <fullName>Merchant unaware of requirement to payoff outstanding advance</fullName>
                </value>
                <value>
                    <fullName>Merchant wants to wait</fullName>
                </value>
                <value>
                    <fullName>Merchant went with competitor</fullName>
                </value>
                <value>
                    <fullName>Moving into New Location</fullName>
                </value>
                <value>
                    <fullName>Partner taking too long to Set Up</fullName>
                </value>
                <value>
                    <fullName>Rescinded by Partner</fullName>
                </value>
                <value>
                    <fullName>Unable to Produce Approved Funding Conditions</fullName>
                </value>
                <value>
                    <fullName>Unable to Satisfy Funding Condition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCF_Alert__c</fullName>
        <formula>Opportunity__r.QC_SCF_Alert__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SCF Alert:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_Loan_Docs__c</fullName>
        <label>Sent Loan Docs</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Signed_Loan_Docs_Received__c</fullName>
        <label>Signed Loan Docs Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submit_to_UW_Processing__c</fullName>
        <formula>Opportunity__r.Submit_to_UW_Processing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submit to UW &amp; Processing</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Syndication_Amount__c</fullName>
        <formula>Opportunity__r.Syndication_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Syndication Amount:</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Liens_Open__c</fullName>
        <formula>text( Opportunity__r.Tax_Liens_Open__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Liens Open:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Programs__c</fullName>
        <label>Test Programs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jewelry</fullName>
                </value>
                <value>
                    <fullName>Limos</fullName>
                </value>
                <value>
                    <fullName>ROI 40 -49</fullName>
                </value>
                <value>
                    <fullName>TM-Web</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Party_Company_Name__c</fullName>
        <label>Third Party Company Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Third_Party_Payoff_Amount__c</fullName>
        <label>Third Party Payoff Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Third_Party_Payoff__c</fullName>
        <label>Third Party Payoff</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_party_underwriting_notes__c</fullName>
        <label>Third party underwriting notes:</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Repay_Amount__c</fullName>
        <label>Total Transactions Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Entity__c</fullName>
        <formula>TEXT( Opportunity__r.Type_of_Entity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type of Entity:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Landlord__c</fullName>
        <label>Type of Landlord:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Management Company</fullName>
                </value>
                <value>
                    <fullName>Private Party</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Relative/Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UCC_Acknowledgement_Date__c</fullName>
        <label>UCC Acknowledgement Date:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UCC_File_Number__c</fullName>
        <label>UCC File Number:</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UCC_Filing_Reason__c</fullName>
        <label>UCC Filing Reason:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Addendum</fullName>
                </value>
                <value>
                    <fullName>Credit Committee</fullName>
                </value>
                <value>
                    <fullName>Loan</fullName>
                </value>
                <value>
                    <fullName>Pay-off</fullName>
                </value>
                <value>
                    <fullName>Renewal Decline</fullName>
                </value>
                <value>
                    <fullName>Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UCC_Filings__c</fullName>
        <label>UCC Filings:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full UCC-1</fullName>
                </value>
                <value>
                    <fullName>Notification UCC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UCC_Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UCC Ordered:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UCC_Request_Date__c</fullName>
        <label>UCC Request Date:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UW_Assigned_Date_Stamp__c</fullName>
        <label>UW Assigned Date Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UW_Decision_Days__c</fullName>
        <formula>if

( isnull (Decision_Date__c) ,NULL ,

IF 

(and(datevalue(UW_Assigned_Date_Stamp__c)=DATE(2013,01,18), datevalue(Decision_Date__c)&gt;DATE(2013,01,21), datevalue(Decision_Date__c)&lt;DATE(2013,01,25)),

Abs((Decision_Date__c -  UW_Assigned_Date_Stamp__c)-3),

if

((Decision_Date__c -  UW_Assigned_Date_Stamp__c)&gt;2.25,

(Decision_Date__c -  UW_Assigned_Date_Stamp__c)-2,

Decision_Date__c -  UW_Assigned_Date_Stamp__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UW Decision Days</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UW_Processing_Notes__c</fullName>
        <label>UW Notes to Processing/Risk Department</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UW_able_to_confirm_Entity_Type__c</fullName>
        <label>UW able to confirm Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Underwriter_Assigned__c</fullName>
        <label>Underwriter Assigned:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUTO DECISION</fullName>
                </value>
                <value>
                    <fullName>CREDIT COMMITTEE OVERIDE</fullName>
                </value>
                <value>
                    <fullName>Aisha</fullName>
                </value>
                <value>
                    <fullName>Enisha</fullName>
                </value>
                <value>
                    <fullName>Ericka</fullName>
                </value>
                <value>
                    <fullName>Erick G.</fullName>
                </value>
                <value>
                    <fullName>Evan</fullName>
                </value>
                <value>
                    <fullName>Greg Dye</fullName>
                </value>
                <value>
                    <fullName>Ken</fullName>
                </value>
                <value>
                    <fullName>Leilani</fullName>
                </value>
                <value>
                    <fullName>Pamela</fullName>
                </value>
                <value>
                    <fullName>Shapour</fullName>
                </value>
                <value>
                    <fullName>Steven</fullName>
                </value>
                <value>
                    <fullName>Theresa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Underwriter_s_Score__c</fullName>
        <label>Underwriter&apos;s Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Underwriting_Decision__c</fullName>
        <label>Underwriting Decision:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Approved by Credit Committee</fullName>
                </value>
                <value>
                    <fullName>Approved by Credit Committee with conditions</fullName>
                </value>
                <value>
                    <fullName>Auto Approved</fullName>
                </value>
                <value>
                    <fullName>Auto Declined</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Declined by Credit Committee</fullName>
                </value>
                <value>
                    <fullName>Declined - Pending Management Review</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Pending Management Review</fullName>
                </value>
                <value>
                    <fullName>Pending management review returned to u/w</fullName>
                </value>
                <value>
                    <fullName>Rescinded by merchant</fullName>
                </value>
                <value>
                    <fullName>Rescinded by Processing</fullName>
                </value>
                <value>
                    <fullName>Rescinded by RapidAdvance</fullName>
                </value>
                <value>
                    <fullName>Rescinded by Underwriting</fullName>
                </value>
                <value>
                    <fullName>Scheduled for credit committee</fullName>
                </value>
                <value>
                    <fullName>Unqualified - Comp. Pay Off too High - Reconsider Later</fullName>
                </value>
                <value>
                    <fullName>Unqualified - Will Not Reconsider</fullName>
                </value>
                <value>
                    <fullName>Unqualified - Will Reconsider in the Future</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unqualified_Reason__c</fullName>
        <description>When adding a new value, add same in OPP object.</description>
        <label>Unqualified Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;12 Separate Daily Deposits Per Month</fullName>
                </value>
                <value>
                    <fullName>Account in Risk</fullName>
                </value>
                <value>
                    <fullName>Business Not on Good Standing</fullName>
                </value>
                <value>
                    <fullName>Competitor balance is too high</fullName>
                </value>
                <value>
                    <fullName>Current Advance Payoff Too High</fullName>
                </value>
                <value>
                    <fullName>Does not meet Loan Criteria</fullName>
                </value>
                <value>
                    <fullName>Does Not Meet Minimum Monthly Credit Card Volume</fullName>
                </value>
                <value>
                    <fullName>Drop in CC Sales Month over Month</fullName>
                </value>
                <value>
                    <fullName>Drop in CC Sales Year over Year</fullName>
                </value>
                <value>
                    <fullName>Eligibility Criteria</fullName>
                </value>
                <value>
                    <fullName>Fraud Alert</fullName>
                </value>
                <value>
                    <fullName>Less than $2500 per month in credit card processing</fullName>
                </value>
                <value>
                    <fullName>Less than $3500 per month in credit card processing</fullName>
                </value>
                <value>
                    <fullName>Less than 12 deposits per day</fullName>
                </value>
                <value>
                    <fullName>Less than 1 Year in Business</fullName>
                </value>
                <value>
                    <fullName>Less than 3 months in Business</fullName>
                </value>
                <value>
                    <fullName>Less than 9 months remaining on lease</fullName>
                </value>
                <value>
                    <fullName>Low Advance Amount Loan Product</fullName>
                </value>
                <value>
                    <fullName>Merchant applying does not have majority ownership</fullName>
                </value>
                <value>
                    <fullName>Minimum advance amount $2500</fullName>
                </value>
                <value>
                    <fullName>Minimum advance amount $5000</fullName>
                </value>
                <value>
                    <fullName>Moving Location</fullName>
                </value>
                <value>
                    <fullName>Moving to new location</fullName>
                </value>
                <value>
                    <fullName>Open Tax Liens/Judgments not under payment plan</fullName>
                </value>
                <value>
                    <fullName>Pre Existing Payoff Figures Balance &gt;$50K</fullName>
                </value>
                <value>
                    <fullName>Previous Performance</fullName>
                </value>
                <value>
                    <fullName>Renewal Net Amount too Low</fullName>
                </value>
                <value>
                    <fullName>Significant Decrease in Credit Card Volume</fullName>
                </value>
                <value>
                    <fullName>Unable to Accept CC Processor</fullName>
                </value>
                <value>
                    <fullName>Unauthorized Sub Lease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_businesses_are_nearby__c</fullName>
        <label>What businesses are nearby?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_do_you_plan_to_use_the_money_for__c</fullName>
        <label>What do you plan to use the money for?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_hours_are_you_open__c</fullName>
        <label>What hours are you open?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_is_the_primary_leaseholder_s_name__c</fullName>
        <label>What is the primary leaseholder&apos;s name?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_the_value_of_their_home__c</fullName>
        <label>What is the value of their home?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>What_is_their_home_mortgage_balance__c</fullName>
        <label>What is their home mortgage balance?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>What_is_your_busy_season__c</fullName>
        <label>What is your busy season?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spring</fullName>
                </value>
                <value>
                    <fullName>Summer</fullName>
                </value>
                <value>
                    <fullName>Fall</fullName>
                </value>
                <value>
                    <fullName>Winter</fullName>
                </value>
                <value>
                    <fullName>Consistent year round</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_is_your_current_balance__c</fullName>
        <label>What is your current balance?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>What_is_your_email_address__c</fullName>
        <label>What is your email address?</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>What_is_your_home_phone_number__c</fullName>
        <label>What is your home phone number?</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>What_is_your_mobile_phone_number__c</fullName>
        <label>What is your mobile phone number?</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>What_is_your_slow_season__c</fullName>
        <label>What is your slow season?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spring</fullName>
                </value>
                <value>
                    <fullName>Summer</fullName>
                </value>
                <value>
                    <fullName>Fall</fullName>
                </value>
                <value>
                    <fullName>Winter</fullName>
                </value>
                <value>
                    <fullName>Consistent year round</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_type_of_Business_is_it__c</fullName>
        <inlineHelpText>If updated with new category, add similar to &quot;Business Category&quot; in Opp Object.</inlineHelpText>
        <label>What type of Business is it?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Antiques/Collectibles</fullName>
                </value>
                <value>
                    <fullName>Appliance Stores</fullName>
                </value>
                <value>
                    <fullName>Arrangements</fullName>
                </value>
                <value>
                    <fullName>Art Galleries</fullName>
                </value>
                <value>
                    <fullName>Audio Equipment</fullName>
                </value>
                <value>
                    <fullName>Automobile Dealerships New/Used</fullName>
                </value>
                <value>
                    <fullName>Automotive - Body Repair, Collision, Painting</fullName>
                </value>
                <value>
                    <fullName>Automotive - Brake and Muffler</fullName>
                </value>
                <value>
                    <fullName>Automotive - General Repair, Truck, RV</fullName>
                </value>
                <value>
                    <fullName>Automotive - Parts, Accessories</fullName>
                </value>
                <value>
                    <fullName>Automotive - Quick Sevice, Lube, Tune-Up</fullName>
                </value>
                <value>
                    <fullName>Automotive - Tire, Glass</fullName>
                </value>
                <value>
                    <fullName>Automotive - Towing &amp; Emergency Road Service</fullName>
                </value>
                <value>
                    <fullName>Automotive - Transmission</fullName>
                </value>
                <value>
                    <fullName>Bar</fullName>
                </value>
                <value>
                    <fullName>Barber Shop</fullName>
                </value>
                <value>
                    <fullName>Billing Services</fullName>
                </value>
                <value>
                    <fullName>Boating/Marina</fullName>
                </value>
                <value>
                    <fullName>Book and Stationary</fullName>
                </value>
                <value>
                    <fullName>Bowling</fullName>
                </value>
                <value>
                    <fullName>Bridal Shop</fullName>
                </value>
                <value>
                    <fullName>Car Alarm Supplier</fullName>
                </value>
                <value>
                    <fullName>Carpet Store</fullName>
                </value>
                <value>
                    <fullName>Car Wash</fullName>
                </value>
                <value>
                    <fullName>Catering</fullName>
                </value>
                <value>
                    <fullName>Check Cashing Companies</fullName>
                </value>
                <value>
                    <fullName>Clothing &amp; Apparel</fullName>
                </value>
                <value>
                    <fullName>Clothing - Shoe Store</fullName>
                </value>
                <value>
                    <fullName>Coffee Shop</fullName>
                </value>
                <value>
                    <fullName>Comedy Clubs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>When_did_you_purchase_start_the_business__c</fullName>
        <label>When did you purchase/start the business</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>When_was_business_opened__c</fullName>
        <label>When was business opened?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Where_is_the_business_located__c</fullName>
        <label>What type of Business Location?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mall</fullName>
                </value>
                <value>
                    <fullName>Office Space</fullName>
                </value>
                <value>
                    <fullName>Shopping Center</fullName>
                </value>
                <value>
                    <fullName>Stand Alone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_the_business_close_for_any_reason__c</fullName>
        <label>Will the business close for any reason?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Would_you_renew_the_lease__c</fullName>
        <label>Would you renew the lease?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>MAYBE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X10_Day_Average_Daily_Repay__c</fullName>
        <label>10 Day Average Daily Transactions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X20_Day_Average_Daily_Repay__c</fullName>
        <label>20 Day Average Daily Transactions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>